--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.13.0"
+config = "0.10"
 ethereum-types = "0.12.1"
 futures = "0.3"
+hex = "0.4.2"
+lazy_static = "1.4"
 log = "0.4"
 reqwest = { version = "0.11", features = ["json"]}
 serde = { version = "1.0", features = ["derive"] }
