--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 base64 = "0.13.0"
 config = "0.10"
+eth2_serde_utils = "0.1.0"
 ethereum-types = "0.12.1"
 futures = "0.3"
 hex = "0.4.2"
