--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0.130"
 serde_json = "1.0"
 slot_clock = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
+state_processing = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
 pretty_env_logger = "0.4.0"
 thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
